Install pagination, Add admin user attribute, Add index with delete option, Add authorization for delete.

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,8 +2,16 @@ jordan:
     name: Jordan Storz
     email: jordan.matt.storz@gmail.com
     password_digest: <%= User.digest('password') %>
+    admin: true
 
 franklin:
     name: Ben Franklin
     email: framerguy@hotmail.com
     password_digest: <%= User.digest('password') %>
+
+<% 30.times do |n| %>
+user_<%= n %>:
+  name:  <%= "User #{n}" %>
+  email: <%= "user-#{n}@example.com" %>
+  password_digest: <%= User.digest('password') %>
+<% end %>
